--- a/documents/title.tex
+++ b/documents/title.tex
@@ -15,6 +15,8 @@
 
     \vfill
 	{\large\itshape Lukas Gemar \par}
+    \vspace{0.3cm}
+	\large S.B. Degree Candidate in Electrical Engineering \par
 	\vfill
 	\large Faculty Advisors: \\ Avi Uttamchandani and Krzysztof Gajos\par
 	\vfill
